--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
     <groupId>com.jenkins</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
+git
     <dependencies>
 
         <dependency>
