--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <docker.image.prefix>registry.cn-hangzhou.aliyuncs.com/java-qiushilian</docker.image.prefix>
+        <docker.image.prefix>192.168.0.201/k8stest</docker.image.prefix>
     </properties>
 
     <dependencies>
